2012-05-03  Takashi Kato  <ktakashi@ymail.com>

	* ext/socket/socket.c (socket_read_u8_all): fixed reading all binary
	data from socket. Before it wasn't finish.

2012-04-23  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/rsa/pkcs/%3a12/keystore.scm (load-keystore): fixed loading
	certificates. it did not load any certificate before.

	* src/port.c (port_cpl): fixed class hierachy of port.

2012-04-20  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/rfc/base64.scm (base64-decode-string): modified to return
	bytevector when optional transcoder was #f.

2012-04-19  Takashi Kato  <ktakashi@ymail.com>

	* src/port.c (Sg_MakeByteArrayOutputPort): improved performance of
	bytevector-output-port and string-output-port.

2012-03-29  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/rfc/x.509.scm: added x509 utility library.

2012-03-18  Takashi Kato  <ktakashi@ymail.com>

	* boot/compiler.scm (define-library): added missing feature cond-expand.

2012-03-12  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/sagittarius/mop/allocation.scm (sagittarius mop allocation):
	added :allocation supported metaclass.

2012-03-09  Takashi Kato  <ktakashi@ymail.com>

	* ext/crypto/crypto/key.scm (crypto): added public/private key export
	and import.

	* sitelib/asn.1/types.scm (asn.1): <der-integer> fixed invalid
	conversion when it got 0 as its value.

2012-03-07  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/util/port.scm (util): added port-fold-right.

	* src/clos.c (Sg_NoNextMethod): fixed infinite loop.

2012-03-05  Takashi Kato  <ktakashi@ymail.com>

	* src/os/win/thread.c (Sg_InternalThreadStart): fixed thread-terminate! related error on Windows.

2012-02-11  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/text/csv.scm (text csv): added csv parse library.

	* src/extlib.stub (current-directory): fixed segv.

2012-02-08  Takashi Kato  <ktakashi@ymail.com>

	* boot/compiler.scm (and-let*): added and-let* as a builtin syntax.
